--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="style.css">
   <title>Sniff</title>
 </head>
+
 <body>
-  
+  <svg id='mainSvg' viewBox='0 0 1920 1080'>
+    <g id='background'>
+    </g>
+
+
+    <g id='sprites'>
+      <rect id='sniff' />
+    </g>
+
+    <g id='foreground'>
+    </g>
+  </svg>
+
+  <script src="script.js"></script>
 </body>
+
 </html>
