--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <svg id='mainSvg' viewBox='0 0 1920 1080'>
-    <g id='background'>
+    <g id='arrows'>
     </g>
 
 
@@ -20,6 +20,19 @@
 
     <g id='foreground'>
     </g>
+    <g id='background'>
+    </g>
+
+    <g id='arrows'>
+      <path id="arrowLeft"
+        d="M122.64,254c3.22,3.21,5.82,2.13,5.82-2.41V216.28a8.23,8.23,0,0,1,8.23-8.23H296.06a8.22,8.22,0,0,0,8.22-8.22V56a8.22,8.22,0,0,0-8.22-8.22H136.69a8.23,8.23,0,0,1-8.23-8.23V4.26c0-4.54-2.6-5.62-5.82-2.41L2.41,122.08a8.24,8.24,0,0,0,0,11.64Z"
+        fill="#6fb52c" />
+      <path id="arrowRight"
+        d="M690.13,133.72a8.22,8.22,0,0,0,0-11.64L569.9,1.85c-3.21-3.21-5.82-2.13-5.82,2.41V39.52a8.23,8.23,0,0,1-8.22,8.23H396.49A8.23,8.23,0,0,0,388.26,56V199.83a8.23,8.23,0,0,0,8.23,8.22H555.86a8.23,8.23,0,0,1,8.22,8.23v35.26c0,4.54,2.61,5.62,5.82,2.41Z"
+        fill="#6fb52c" />
+    </g>
+
+
   </svg>
 
   <script src="script.js"></script>
