--- a/index2.html
+++ b/index2.html
@@ -11,13 +11,11 @@
     <svg id="mainSvg" viewBox="0 0 1920 1080">
       <g id="background"></g>
 
-      <g id="sprites">
-        <!-- <rect id='sniff' /> -->
-      </g>
+      <g id="sprites"></g>
 
       <g id="foreground"></g>
     </svg>
-
-    <script src="script.js"></script>
+    <div id="snifcontainer"></div>
+    <script src="coll.js"></script>
   </body>
 </html>
