--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <svg id='mainSvg' viewBox='0 0 1920 1080'>
     <g id='background'>
+      <image id="background-image" xlink:href="" width="100%" height="100%"/>
     </g>
 
 
@@ -22,7 +23,11 @@
     </g>
   </svg>
 
-  <script src="script.js"></script>
+  <div id="startcontainer"></div>
+  <div id="levelscontainer"></div>
+
+  <script src="level-changing.js"></script>
+  <!-- <script src="script.js"></script> -->
 </body>
 
 </html>
