Menu back button

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 <body>
   <svg id='mainSvg' viewBox='0 0 1920 1080'>
     <g id='background'>
-      <image id="background-image" xlink:href="" width="100%" height="100%"/>
+      <image id="background-image" class="hidden" xlink:href="" width="100%" height="100%"/>
     </g>
-
 
     <g id='sprites'>
       <rect id='sniff' />
