--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <g id='sprites'>
       <rect id='sniff' />
+      <!-- <use xlink:href="#water" x="1500" y='800' /> -->
     </g>
 
     <g id='foreground'>
@@ -31,9 +32,76 @@
         d="M690.13,133.72a8.22,8.22,0,0,0,0-11.64L569.9,1.85c-3.21-3.21-5.82-2.13-5.82,2.41V39.52a8.23,8.23,0,0,1-8.22,8.23H396.49A8.23,8.23,0,0,0,388.26,56V199.83a8.23,8.23,0,0,0,8.23,8.22H555.86a8.23,8.23,0,0,1,8.22,8.23v35.26c0,4.54,2.61,5.62,5.82,2.41Z"
         fill="#6fb52c" />
     </g>
-
-
   </svg>
+
+<svg id="water" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108.51 65.85" width='100' height='100'>
+    <g>
+        <g>
+            <path d="M64.81,33.51A26.52,26.52,0,0,1,91.53,7.19L106,7.3a2.49,2.49,0,0,1,2.47,2.5A10.71,10.71,0,0,1,97.73,20.42l4.23,0a2.49,2.49,0,0,1,2.47,2.5A10.7,10.7,0,0,1,93.66,33.57l4.22,0a2.48,2.48,0,0,1,2.47,2.5A10.7,10.7,0,0,1,89.58,46.72l-24.77-.23Z" fill="#e9e8e8" />
+            <path d="M43.7,33.51A26.53,26.53,0,0,0,17,7.19L2.47,7.3A2.48,2.48,0,0,0,0,9.8,10.7,10.7,0,0,0,10.77,20.42l-4.22,0A2.48,2.48,0,0,0,4.08,23,10.7,10.7,0,0,0,14.85,33.57l-4.23,0a2.48,2.48,0,0,0-2.46,2.5A10.69,10.69,0,0,0,18.93,46.72l24.77-.23Z" fill="#e9e8e8" />
+        </g>
+        <g>
+            <path d="M84.2,32.92A29.75,29.75,0,1,1,54.45,3.17,29.74,29.74,0,0,1,84.2,32.92" fill="#92d2e0" stroke="#1d1d1b" stroke-miterlimit="10" />
+            <path d="M84.2,32.92A29.75,29.75,0,1,1,54.45,3.17,29.74,29.74,0,0,1,84.2,32.92Z" fill="none" stroke="#ededed" stroke-miterlimit="10" stroke-width="1.93" />
+            <path d="M54.69,47.27c-5.2,0-10.49-3.81-10.49-11.05a1.87,1.87,0,1,1,3.73,0c0,5,3.5,7.32,6.76,7.32a1.87,1.87,0,1,1,0,3.73m1-32.75a1.78,1.78,0,0,0-2.43,0c-3.54,3.37-13.63,13.75-13.63,22.54,0,10.61,7.71,14.75,14.86,14.75s14.87-4.14,14.87-14.75c0-8.79-10.13-19.17-13.67-22.54" fill="#0b1213" stroke="#1d1d1b" stroke-miterlimit="10" />
+        </g>
+        <rect id="waterRect" x="2.62" width="103.67" height="65.85" fill="none" />
+    </g>
+</svg>
+
+<svg id="electricity" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108.51 65.85">
+  <g data-name="electricity">
+      <g>
+          <g>
+              <path d="M64.81,33.08A26.52,26.52,0,0,1,91.53,6.75L106,6.86a2.49,2.49,0,0,1,2.47,2.51A10.7,10.7,0,0,1,97.73,20L102,20a2.49,2.49,0,0,1,2.47,2.51A10.7,10.7,0,0,1,93.66,33.13l4.22,0a2.48,2.48,0,0,1,2.47,2.51A10.7,10.7,0,0,1,89.58,46.28l-24.77-.23Z" fill="#e9e8e8" />
+              <path d="M43.7,33.08A26.53,26.53,0,0,0,17,6.75l-14.5.11A2.48,2.48,0,0,0,0,9.37,10.7,10.7,0,0,0,10.77,20L6.55,20a2.48,2.48,0,0,0-2.47,2.51A10.7,10.7,0,0,0,14.85,33.13l-4.23,0a2.48,2.48,0,0,0-2.46,2.51A10.69,10.69,0,0,0,18.93,46.28l24.77-.23Z" fill="#e9e8e8" />
+          </g>
+          <g>
+              <path d="M25.24,32.92A29.75,29.75,0,1,1,55,62.67,29.75,29.75,0,0,1,25.24,32.92" fill="#fbbb21" />
+              <path d="M25.24,32.92A29.75,29.75,0,1,1,55,62.67,29.75,29.75,0,0,1,25.24,32.92Z" fill="none" stroke="#ededed" stroke-miterlimit="10" />
+              <polygon points="54.98 13.55 54.98 29.55 66.29 29.55 54.98 52.79 54.98 36.8 43.7 36.8 54.98 13.55" fill="#0b1213" />
+              <path d="M52.46,13.55v16A2.56,2.56,0,0,0,55,32.09H66.29L64.1,28.27c-.53,1.07-1,2.15-1.57,3.22L59,38.77l-3.78,7.77-2.28,4.7c0,.09-.08.18-.13.27l4.73,1.28v-16A2.56,2.56,0,0,0,55,34.26H43.7l2.19,3.82,1.56-3.21L51,27.6l3.78-7.77q1.14-2.35,2.29-4.71c0-.1.09-.19.14-.29a2.7,2.7,0,0,0,.25-1.95,2.52,2.52,0,0,0-1.17-1.52,2.56,2.56,0,0,0-2-.26,2.49,2.49,0,0,0-1.52,1.17l-1.56,3.21-3.54,7.28-3.78,7.76q-1.14,2.36-2.29,4.71c0,.1-.09.19-.13.29a2.52,2.52,0,0,0,0,2.56,2.55,2.55,0,0,0,2.19,1.26H55L52.46,36.8v16a2.55,2.55,0,0,0,3.22,2.45,2.48,2.48,0,0,0,1.52-1.17l1.56-3.22q1.77-3.63,3.53-7.28l3.78-7.77,2.28-4.69c0-.09.08-.19.13-.28a2.59,2.59,0,0,0,.35-1.28,2.62,2.62,0,0,0-.35-1.28A2.57,2.57,0,0,0,66.29,27H55l2.54,2.54v-16a2.54,2.54,0,1,0-5.08,0" fill="#0b1213" />
+          </g>
+      </g>
+      <rect id="electricityRect" x="3.41" width="103.67" height="65.85" fill="none" />
+  </g>
+</svg>
+
+<svg id="light" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108.51 65.85">
+  <g data-name="light">
+      <g>
+          <g>
+              <path d="M64.81,35.63A26.52,26.52,0,0,1,91.53,9.3L106,9.41a2.5,2.5,0,0,1,2.47,2.51A10.7,10.7,0,0,1,97.73,22.53l4.23,0a2.5,2.5,0,0,1,2.47,2.51A10.7,10.7,0,0,1,93.66,35.68l4.22,0a2.48,2.48,0,0,1,2.47,2.51A10.7,10.7,0,0,1,89.58,48.83L64.81,48.6Z" fill="#e9e8e8" />
+              <path d="M43.7,35.63A26.53,26.53,0,0,0,17,9.3l-14.5.11A2.49,2.49,0,0,0,0,11.92,10.69,10.69,0,0,0,10.77,22.53l-4.22,0a2.49,2.49,0,0,0-2.47,2.51A10.69,10.69,0,0,0,14.85,35.68l-4.23,0a2.48,2.48,0,0,0-2.46,2.51A10.69,10.69,0,0,0,18.93,48.83L43.7,48.6Z" fill="#e9e8e8" />
+          </g>
+          <g>
+              <path d="M84,32.92A29.75,29.75,0,1,1,54.25,3.17,29.75,29.75,0,0,1,84,32.92" fill="#76b82a" />
+              <path d="M84,32.92A29.75,29.75,0,1,1,54.25,3.17,29.75,29.75,0,0,1,84,32.92Z" fill="none" stroke="#ededed" stroke-miterlimit="10" stroke-width="1.93" />
+              <path d="M51.51,52.11a2.19,2.19,0,0,0,4.37,0Zm-3.83-3.28A2.19,2.19,0,0,0,49.87,51h7.64a2.19,2.19,0,0,0,2.19-2.19Zm0-2.18h12V44.46h-12ZM51.5,15.9a1.12,1.12,0,0,1-.69,1.21,8.23,8.23,0,0,0-5.18,6.24,1.12,1.12,0,0,1-1.27.87A1.13,1.13,0,0,1,43.48,23,10.37,10.37,0,0,1,50,15.08a1.18,1.18,0,0,1,1.48.82m2.19-4.21c-6.66,0-13.11,5.16-13.11,12.47,0,9.49,7.1,11.48,7.1,18.12h12c0-6.64,7.1-8.63,7.1-18.12,0-7.31-6.45-12.47-13.11-12.47" fill="#0b1213" />
+          </g>
+      </g>
+      <rect id="lightRect" x="2.45" width="103.67" height="65.85" fill="none" />
+  </g>
+</svg>
+
+<svg id="heat" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108.51 65.85">
+  <g data-name="heat">
+      <g data-name="heat">
+          <g>
+              <path d="M64.81,35A26.52,26.52,0,0,1,91.53,8.67L106,8.78a2.49,2.49,0,0,1,2.47,2.5A10.71,10.71,0,0,1,97.73,21.9l4.23,0a2.49,2.49,0,0,1,2.47,2.5A10.7,10.7,0,0,1,93.66,35.05l4.22,0a2.48,2.48,0,0,1,2.47,2.5A10.68,10.68,0,0,1,89.58,48.19L64.81,48Z" fill="#e9e8e8" />
+              <path d="M43.7,35A26.52,26.52,0,0,0,17,8.67l-14.5.11A2.48,2.48,0,0,0,0,11.28,10.7,10.7,0,0,0,10.77,21.9l-4.22,0a2.48,2.48,0,0,0-2.47,2.5A10.7,10.7,0,0,0,14.85,35.05l-4.23,0a2.48,2.48,0,0,0-2.46,2.5A10.68,10.68,0,0,0,18.93,48.19L43.7,48Z" fill="#e9e8e8" />
+          </g>
+          <g>
+              <path d="M84,33.4A29.75,29.75,0,1,1,54.25,3.65,29.75,29.75,0,0,1,84,33.4" fill="#fff042" />
+              <circle cx="54.25" cy="33.4" r="29.75" fill="none" stroke="#ededed" stroke-miterlimit="10" stroke-width="1.93" />
+              <path d="M64.81,38.32a11.68,11.68,0,1,1-5-15.75,11.67,11.67,0,0,1,5,15.75M47.4,46.47A15.27,15.27,0,1,1,68,40a15.28,15.28,0,0,1-20.6,6.5M73.75,43c.49-.94-2.56-3.37-2.23-4.34s4.22-1.1,4.39-2.11-3.47-2.4-3.47-3.44,3.68-2.35,3.53-3.37-4-1.2-4.36-2.19,2.78-3.37,2.31-4.3-4.21.11-4.82-.74,1.61-4.06.87-4.81-4,1.42-4.81.79.28-4.34-.66-4.83-3.37,2.56-4.34,2.23-1.1-4.23-2.11-4.4-2.4,3.48-3.43,3.47-2.35-3.68-3.38-3.52-1.2,4.05-2.19,4.36-3.36-2.78-4.3-2.32.11,4.22-.74,4.82-4.06-1.6-4.8-.87,1.41,4,.79,4.82-4.35-.28-4.84.66,2.56,3.36,2.23,4.34-4.22,1.1-4.39,2.11,3.47,2.4,3.46,3.43-3.67,2.35-3.52,3.38,4.05,1.2,4.36,2.19-2.78,3.36-2.31,4.3,4.21-.11,4.82.74-1.61,4.05-.88,4.8,4-1.41,4.82-.79-.28,4.35.66,4.83,3.37-2.55,4.34-2.23,1.1,4.23,2.11,4.4,2.4-3.48,3.43-3.47,2.35,3.68,3.38,3.53,1.2-4,2.19-4.36,3.36,2.78,4.3,2.31-.11-4.22.74-4.82,4,1.61,4.8.87-1.41-4-.79-4.81,4.35.28,4.84-.66" fill="#0b1213" />
+          </g>
+      </g>
+      <rect id="heatRect" x="2.42" width="103.67" height="65.85" fill="none" />
+  </g>
+</svg>
+
+<div class="points">Score:<span class="score"></span></div>
 
   <script src="script.js"></script>
 </body>
