--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Sniff</title>
 </head>
@@ -29,8 +30,11 @@
     </g>
   </svg>
 
-  <div class="points">Score:<span class="score"></span></div>
-  
+  <div class="pointsFlex">
+    <div class="highPoints hidden">High score: <span class="Highscore"></span> <button class='highScoreBtn'>Save Score</button></div>
+    <div class="points hidden">Score: <span class="score">0</span></div>
+  </div>
+
   <div class="waterContainer"></div>
   <div class="electricityContainer"></div>
   <div class="lightContainer"></div>
