added info circle

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <g id='background'>
       <image id="background-image" class="hidden" xlink:href="" width="100%" height="100%"/>
     </g>
-
+    <image  id='questionMark' xlink:href="./assets/questionMark.svg"  x="200" y="100" height="130" width="130"/>
     <g id='sprites'>
     </g>
 
@@ -29,6 +29,7 @@
       </g>
     </g>
   </svg>
+ 
 
   <div class="pointsFlex">
     <div class="highPoints hidden">High score: <span class="Highscore"></span> <button class='highScoreBtn'>Save Score</button></div>
@@ -43,7 +44,6 @@
   <div id="startcontainer"></div>
   <div id="levelscontainer"></div>
 
-  <!-- <script src="level-changing.js"></script> -->
   <script src="script.js"></script>
 </body>
 
