--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <div id="snifcontainer"></div>
   <div id="startcontainer"></div>
   <div id="levelscontainer"></div>
+  <div id="achievementscontainer"></div>
 
   <script src="script.js"></script>
 </body>
