--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </g>
 
     <g id='sprites'>
+      <image  id='questionMark' xlink:href="./assets/questionMark.svg"  x="200" y="100" height="130" width="130"/>
     </g>
 
     <g id='foreground'>
